ingress/default-backend/deployment.yaml
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: default-backend
  namespace: ingress
  labels:
    app: default-backend
    type: default-backend
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  selector:
    matchLabels:
      app: default-backend
      type: default-backend
  template:
    metadata:
      name: default-backend
      namespace: ingress
      labels:
        app: default-backend
        type: default-backend
    spec:
      containers:
      - name: default-backend
        image: gcr.io/google_containers/defaultbackend:1.3
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            cpu: 25m
            memory: 20Mi
          limits:
            cpu: 50m
            memory: 40Mi
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 20
          periodSeconds: 5
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 3
        ports:
        - containerPort: 8080
